Fix chart animation issues when carousel active element changes and fix dashboard h1 element overflow

--- a/client/src/styles/Dashboard.css
+++ b/client/src/styles/Dashboard.css
@@ -1,9 +1,13 @@
 .dashboard {
   max-width: 100%;
+  width: 100%;
 }
 
 .dashboard h1 {
   margin-bottom: 50px;
+  line-height: 1.3;
+  overflow-x: auto;
+  overflow-y: hidden;
 }
 
 .dashboard .unfocussed {
@@ -11,17 +15,17 @@
   pointer-events: none;
 }
 
-.dashboard > .button-container {
+.dashboard > .accordion-wrapper > .button-container {
   display: flex;
   justify-content: flex-end;
   margin-bottom: 10px;
 }
 
-.dashboard > .button-container > button:first-of-type {
+.dashboard > .accordion-wrapper > .button-container > button:first-of-type {
   margin-right: 10px;
 }
 
-.dashboard > .button-container > button {
+.dashboard > .accordion-wrapper > .button-container > button {
   padding: 0.375rem 2.25rem 0.375rem 0.75rem;
   background-color: var(--bs-body-bg);
   background-repeat: no-repeat;
@@ -59,8 +63,15 @@
   background-image: var(--up-arrow);
 }
 
+.accordion-wrapper {
+  display: grid;
+  justify-content: center;
+}
+
 .accordion {
   --bs-accordion-active-bg: var(--primary-color);
+  min-width: 950px;
+  width: fit-content;
 }
 
 .accordion .collapse:not(.show) {
@@ -83,6 +94,13 @@
   color: white;
 }
 
+@media only screen and (max-width: 1000px) {
+  .accordion {
+    min-width: auto;
+  }
+}
+
+
 @media only screen and (max-width: 768px) {
   .dashboard .no-tasks-message {
     margin-top: 30px;
@@ -90,5 +108,14 @@
 
   .dashboard .chart-container > * {
     max-width: 70%;
+  }
+
+  .accordion-wrapper {
+    display: flex;
+    flex-direction: column;
+  }
+
+  .accordion {
+    width: initial;
   }
 }
